--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "db:push": "prisma db push",
     "db:seed": "tsx prisma/seed.ts",
     "db:studio": "prisma studio",
-    "db:reset": "prisma migrate reset --force --skip-seed && pnpm run db:seed"
+    "db:reset": "prisma migrate reset --force --skip-seed && pnpm run db:seed",
+    "vercel-build": "pnpm db:generate && pnpm build"
   },
   "dependencies": {
     "@prisma/client": "^6.9.0",
