--- a/package.json
+++ b/package.json
@@ -28,18 +28,23 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.3.1",
+    "@types/qrcode": "^1.5.5",
+    "@types/ws": "^8.18.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "login": "^0.8.0",
     "lucide-react": "^0.514.0",
     "next": "15.3.3",
     "prisma": "^6.9.0",
+    "qrcode": "^1.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "sonner": "^2.0.5",
     "stripe": "^18.2.1",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "wechatpay-node-v3": "^2.2.1",
+    "ws": "^8.18.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
